@@ -1,8 +1,8 @@
 Copyright (C) 2009-2011 Peter Breitenlohner <tex-live@tug.org>
 You may freely use, modify and/or distribute this file.
 
-	Configure options for the  TeX Live (TL) build system
-	=====================================================
+	Configure options for the TeX Live (TL) build system
+	====================================================
 
 The TL build system contains a collection of program packages, i.e.,
 subdirectories texk/PROG/ (where `PROG' is web2c, afm2pl, bibtex8, etc.) and
@@ -119,7 +119,7 @@ appended to banner lines.  The Build script for a native TL build doesn't
 use this option, but distro builds should specify this as, e.g.,
 '/SomeDistro'.
 
-2.3.1. --with-editor=CMD
+2.3.2. --with-editor=CMD
 Specify the command CMD to invoke from the `e' option, replacing the default
 `vi +%d '%s'' for Unix or `texworks --position=%d "%s"' for Windows.
 
@@ -136,12 +136,13 @@ If enabled (by default) allow TeX's '--ipc' option.
 
 2.3.6. --disable-tex, --enable-etex, --disable-aleph, --disable-pdftex,
        --disable-luatex, --disable-xetex, --disable-ptex, --disable-eptex,
-       --disable-mf, --disable-mp
+       --disable-uptex, --disable-euptex, --disable-mf, --disable-mp
 Do or do not build the various TeX, METAFONT, and MetaPost engines
 (defaults for the TeX engines are defined in texk/web2c/ac/web2c.ac).
 
 2.3.7. --enable-tex-synctex, --disable-etex-synctex,
        --disable-ptex-synctex, --disable-eptex-synctex
+       --disable-uptex-synctex, --disable-euptex-synctex
        --disable-pdftex-synctex, --disable-xetex-synctex
 Build the various TeX engines with or without SyncTeX support (ignored for a
 native TeX Live build, defaults are defined in texk/web2c/ac/web2c.ac).
@@ -157,7 +158,7 @@ Do not build a separate non-graphically-capable METAFONT.
 
 2.3.11. --disable-web-progs
 Do not build the WEB programs bibtex ... weave, e.g., if you just
-want to rebuild engines.
+want to rebuild some engines.
 
 2.3.12. --disable-omfonts
 Build the Web versions of the omega font utilities (ofm2opl, opl2ofm, ovf2ovp,
@@ -233,13 +234,13 @@ The flags for a system freetype2 library are determined via freetype-config.
 
 3.4. Configure options for libpoppler
 -------------------------------------
-3.4.1. --with-system-xpdf
-Use an installed (system) version >=0.12 of libpoppler instead of xpdf
-(and pkg-config to obtain the required flags).
-
-3.4.2. --with-system-poppler
+3.4.1. --with-system-poppler
 Use an installed (system) version >=0.12 of libpoppler (and pkg-config
 to obtain the required flags).
+
+3.4.2. --with-system-xpdf
+Use an installed (system) version >=0.12 of libpoppler instead of xpdf
+(and pkg-config to obtain the required flags).
 
 3.5. Configure options for libgraphite
 --------------------------------------
@@ -267,7 +268,7 @@ For system icu libraries.
 
 4.3. PKG_CONFIG=/path/to/pkg-config
 -----------------------------------
-For fontconfig and system xpdf (poppler) libraries.
+For fontconfig and system poppler libraries.
 
 4.4. CLISP=/path/to/clisp
 -------------------------
